작업 지시 긴급 수정, 정렬 수정